# dfinity_candid

rust/bench/: Cargo.toml
rust/candid/: Cargo.toml
rust/candid/fuzz/: Cargo.toml
rust/candid_derive/: Cargo.toml
rust/candid_parser/: Cargo.toml
rust/ic_principal/: Cargo.toml
tools/candiff/: Cargo.toml
tools/didc/: Cargo.toml
tools/ui/src/didjs/: Cargo.toml
